force-app/main/default/objects/Contact/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <description>Identifies whether the contact participates as a Trainer or a Trainee to drive flow branching and assignment logic.</description>
    <inlineHelpText>Select Trainer when the contact delivers courses; select Trainee when the contact enrolls in courses.</inlineHelpText>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Attendee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>