force-app/main/default/objects/Contact/fields/Expertise_Area__c.field-meta.xml
<CustomField>
    <fullName>Expertise_Area__c</fullName>
    <description>Primary subject matter expertise of a trainer used for course-to-trainer mapping.</description>
    <inlineHelpText>Enter the trainer’s core expertise (e.g., Salesforce Admin, Apex, LWC, Data Modeling).</inlineHelpText>
    <label>Expertise Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>