force-app/main/default/objects/Contact/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>Most recent interaction date used for inactivity checks and reminders.</description>
    <inlineHelpText>Set via automation when key interactions occur; used for inactivity-based evaluations.</inlineHelpText>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>