force-app/main/default/objects/Contact/fields/Learning_Preference__c.field-meta.xml
<CustomField>
    <fullName>Learning_Preference__c</fullName>
    <description>Preferred learning mode for a trainee used to route screen flows and course format selection.</description>
    <inlineHelpText>Select the preferred learning mode for this trainee to tailor course offerings.</inlineHelpText>
    <label>Learning Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Classroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>