force-app/main/default/objects/Contact/fields/Student_Status__c.field-meta.xml
<CustomField>
    <fullName>Student_Status__c</fullName>
    <description>Tracks a trainee’s journey through the program: New, Active, or Completed. Used by autolaunched flows.</description>
    <inlineHelpText>Select the current stage of the trainee’s journey to drive automation and reporting.</inlineHelpText>
    <label>Student Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>