force-app/main/default/objects/Contact/fields/Total_Enrolments__c.field-meta.xml
<CustomField>
    <fullName>Total_Enrolments__c</fullName>
    <description>Count of all course enrolments associated to the trainee used for rollup-style logic and progress tracking.</description>
    <inlineHelpText>Auto-updated by automation; represents the number of enrolments this trainee has across all courses.</inlineHelpText>
    <label>Total Enrolments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>