force-app/main/default/objects/Contact/fields/Trainer_Level__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Level__c</fullName>
    <description>Represents the experience level of a trainer to support assignment and scheduling logic.</description>
    <inlineHelpText>Select the trainer’s seniority level to guide course assignment and eligibility.</inlineHelpText>
    <label>Trainer Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
                <isActive>false</isActive>
                <label>Senior</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>