force-app/main/default/objects/Contact/recordTypes/Attendee.recordType-meta.xml
<RecordType>
    <fullName>Attendee</fullName>
    <active>true</active>
    <description>Attendee record type for contacts who enroll in courses.</description>
    <label>Attendee</label>
</RecordType>