force-app/main/default/objects/Contact/recordTypes/Trainer.recordType-meta.xml
<RecordType>
    <fullName>Trainer</fullName>
    <active>true</active>
    <description>Trainer record type for contacts who deliver courses.</description>
    <label>Trainer</label>
</RecordType>