force-app/main/default/objects/Contact/listViews/Attendees.listView-meta.xml
<ListView>
    <fullName>Attendees</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Student_Status__c</columns>
    <columns>Learning_Preference__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Attendee</value>
    </filters>
    <label>Attendees</label>
</ListView>